<resources>
    <string name="app_name">ShouHu</string>
    <string name="title_activity_homepage">Homepage</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_home">首頁</string>
    <string name="title_bmi">BMI</string>
    <string name="title_sleep">睡眠</string>
    <string name="title_water">飲水</string>
    <string name="title_timer">Timer</string>
    <string name="title_signin">登入</string>
    <string name="title_set">設定</string>
    <string name="title_report">查看提醒時間</string>
    <string name="title_version">版本：v2.2</string>
    <string name="title_use">使用說明</string>
    <string name="title_signout">登出</string>
    <string name="setnew">個人頁面</string>
    <string name="setsleep">設定睡眠提醒</string>
    <string name="timerhot">10</string>
    <string name="timerrest">10</string>
    <string name="timerwork">30</string>
    <string name="timertimes">4</string>
    <string name="one"><![CDATA[<500cc]]></string>
    <string name="two">501~1000cc</string>
    <string name="three">1001~1500cc</string>
    <string name="four">1501~2000cc</string>
    <string name="five">2001~2500cc</string>
    <string name="six"><![CDATA[>2500cc]]></string>
    <string name="watersug">守護-建議每日飲水量:2000CC</string>

</resources>
