<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/signin"
        android:title="@string/title_signin" />
    <item
        android:id="@+id/use"
        android:title="@string/title_use" />
    <item
        android:id="@+id/set"
        android:title="@string/title_set" >
        <menu >
            <item
                android:id="@+id/setnew"
                android:title="@string/setnew" />
            <item
                android:id="@+id/setsleep"
                android:title="@string/setsleep" />
        </menu>
    </item>
    <item
        android:id="@+id/report"
        android:title="@string/title_report" />
    <item
        android:id="@+id/version"
        android:title="@string/title_version" />
    <item
        android:id="@+id/signout"
        android:title="@string/title_signout" />


</menu>